infra/environments/alpa-prod/prodConfigPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-game
spec:
  template:
    spec:
      containers:
        - name: crash-game
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pump-dump-game
spec:
  template:
    spec:
      containers:
        - name: pump-dump-game
