infra/environments/alpa-prod/replicasPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-game
spec:
  replicas: 2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pump-dump-game
spec:
  replicas: 2
