infra/environments/alpa-prod/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crash-game-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https"
    kubernetes.io/tls-acme: "true"
    konghq.com/https-redirect-status-code: "301"
    # reference production issuer
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-kong"

spec:
  tls:
  - hosts:
    - elon-api.alpacasino.io
    secretName: crash-game-cert-secret
  rules:
  - host: elon-api.alpacasino.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crash-game-backend
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crash-game-ingress-geoblock
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https"
    kubernetes.io/tls-acme: "true"
    konghq.com/https-redirect-status-code: "301"
    # reference production issuer
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-kong"
    konghq.com/override: geoblock-routing-crashgame

spec:
  tls:
  - hosts:
    - elon-api.alpacasino.io
    secretName: crash-game-cert-secret
  rules:
  - host: elon-api.alpacasino.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: geoblock-static
              port:
                number: 80
